# pdf-search

./: LICENSE.txt  pyproject.toml  readme.md
src/pdf_search/: __about__.py  __main__.py  application.py  console.py  pdf.py  vault.py
