[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-search"
version = "0.0.1"
authors = [
  { name="Nikhil Devadiga", email="nmdevadiga216@gmail.com"},
]
description = "A console application to search through a folder of pdf files using fuzzy keyword search"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.version]
path = "src/pdf_search/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.gitignore",
  "/.vscode",
  "/docs",
  "/venv",
  "/vault",
  "/main.py",
  "/testing.ipynb",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_search"]