[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-search"
version = "0.2.0"
authors = [
  { name="Nikhil Devadiga", email="nmdevadiga216@gmail.com"},
]
description = "A console application to search through a folder of pdf files using fuzzy keyword search"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "polars == 0.19.2",
  "whoosh == 2.7.4",
  "rich >= 13.5, < 14",
  "pypdf >= 4, < 5",
  "xlsx2csv >= 0.8, < 1",
  "python-doctr >= 0.7.0, < 1",
  "torch >= 2.0.0, < 3",
  "torchvision >= 0.15.2, < 1",
  "pycryptodome == 3.19.0",
]

[tool.hatch.version]
path = "src/pdf_search/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.gitignore",
  "/.vscode",
  "/docs",
  "/venv",
  "/vault",
  "/main.py",
  "/testing.ipynb",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_search"]